<resources>
    <string name="app_name">TV Show Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_show">Add new tv show</string>
    <string name="show_list">show list of added tv shows</string>
    <string name="tv_show">TV Show</string>
    <string name="seasons">Seasons</string>
    <string name="save_tv_show">Save TV show</string>
    <string name="movie_name">Movie name</string>
    <string name="release_date">Release Date</string>
    <string name="welcome">Hello, Welcome to your TV Show Manager</string>
</resources>