<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/itemView"
        android:background="?attr/selectableItemBackground"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/movie_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMovieName"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/release_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSeasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReleaseDate"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/seasons"
            android:layout_marginBottom="12dp"
            android:textSize="14sp" />

    </RelativeLayout>
</layout>